module 2 updated, font in css increased

--- a/slides/01_intro_and_principles_of_repro.Rmd
+++ b/slides/01_intro_and_principles_of_repro.Rmd
@@ -88,13 +88,19 @@ class: inverse
 
 Chosen topics are: foundational, widely applicable, and transferable conceptually.
 
+
+
 .pull-left[
 
+.font90[
+
 **It is**
-* An introduction to R for those that have no previous experience
-* About using RStudio projects and good practice in code and project documentation and organisation
+* An introduction to R for those without previous experience
+* About using RStudio projects and good practice for code and project documentation and organisation
 * An introduction to the tidyverse, RMarkdown, some more advanced data import
  
+
+]
 
 ]
 
@@ -102,17 +108,21 @@ Chosen topics are: foundational, widely applicable, and transferable conceptuall
 
 .pull-right[
 
+.font90[
+
 **It is not**
 * An introduction to statistics  
 * Magic  
 
 ]
 
-
+]
 ---
 # Programme overview
 
 Modules lasting from 30 minutes to 2 hours. The selection of modules you undertake will depend on your previous experience.
+
+.font60[
 
 [1. Introduction and Principles of reproducibility](01_intro_and_principles_of_repro.html)  
 Audience: Everyone
@@ -129,8 +139,14 @@ Audience: Those without previous experience of R
 * Importing data: working directories and paths  
 * Summarising and visualising with the [`tidyverse`](https://www.tidyverse.org/)  
 * Installing and loading packages  
+
+]
+
 ---
-# Programme overview - continued
+# Programme overview
+
+.font60[
+
 [3. RStudio Projects](03_rstudio_projects.html)  
 Audience: Those without experience of RStudio projects
 * Organising your work in a logical, consistent and reproducible way using RStudio Projects  
@@ -141,8 +157,14 @@ Audience: Those without experience of RStudio projects
 Audience: For those with previous experience of R but little of 'tidy data' and the tidyverse, such as having done "Introduction to R and working with data."
 * Using the tidyverse including the pipe to link operations together.  
 * Carrying out some common data tidying tasks such as reshaping, renaming and recoding variable and cleaning cell contents  
+
+]
+
 ---
-# Programme overview - continued   
+# Programme overview
+
+.font60[
+
 [5. Advanced data import](05_advanced_data_import.html)  
 Audience: For those with previous experience of R such as having done "Introduction to R and working with data" and "Tidying data and the tidyverse including the pipe."
 * Understanding what matters in data import  
@@ -150,10 +172,12 @@ Audience: For those with previous experience of R such as having done "Introduct
 * Carrying out some simple web scraping  
 * Packages available for importing publicly accessible data from APIs  
 
-[6. R Markdown for Reproducible Reports]()  
+[6. R Markdown for Reproducible Reports](06_r_markdown_for_reproducible_reports.html)  
 Audience: For those with previous experience of R such as having done "Introduction to R and working with data."
 * Making more advanced figures  
 * Creating reproducible reports in a variety of output formats.  
+
+]
 
 ---
 class: inverse
@@ -374,14 +398,16 @@ Also see National Science Foundation `r Cite(myBib, "K_Bollen2015-un")`
 ---
 # Open Science
 
-```{r foster-fig, echo = FALSE}
+```{r foster-fig, echo = FALSE, out.width="700px"}
 knitr::include_graphics("../pics/Foster.png")
 ```
 .font60[
 By Petr Knoth and Nancy Pontika - https://en.wikipedia.org/wiki/Open_science#/media/File:Os_taxonomy.png, CC BY 3.0, https://commons.wikimedia.org/w/index.php?curid=61125075
-]
 
 FAIR - Findable, Accessible, Interoperable, Reusable `r Cite(myBib, "Wilkinson2016-pu")`
+]
+
+
 
 ---
 class: inverse
@@ -390,23 +416,13 @@ class: inverse
 
 
 ---
-background-image: url(../pics/rationale1.png)
-background-position: 50% 35%
-background-size: 600px
-
 # Rationale for scripting analysis
 Science is the generation of ideas, designing work to test them and reporting the results.
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
+```{r echo = FALSE, out.width="600px"}
+knitr::include_graphics("../pics/rationale1.png")
+```
+
 .pull-left[
 Generating the results
 ]
@@ -415,68 +431,40 @@ Generating the results
 Analysing and reporting them
 ]
 ---
-background-image: url(../pics/rationale2.png)
-background-position: 50% 35%
-background-size: 600px
 
 # Rationale for scripting analysis
 We ensure reproducibility of laboratory and field work by planning and recording in lab books and using standard protocols. 
---
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
+
+```{r echo = FALSE, out.width="600px"}
+knitr::include_graphics("../pics/rationale2.png")
+```
+
 Even so replicating results can be hard.
 ---
-background-image: url(../pics/rationale3.png)
-background-position: 50% 35%
-background-size: 600px
 
 # Rationale for scripting analysis
 We ensure reproducibility of laboratory and field work by planning and recording in lab books and using standard protocols. 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-Even so replicating results can be hard.
+
+```{r echo = FALSE, out.width="600px"}
+knitr::include_graphics("../pics/rationale3.png")
+```
+
 
 Workflows for computational projects and the data analysis and reporting of other work can, and should, be 100% reproducible! Scripting is the way to achieve this.
 
 ---
-background-image: url(../pics/rationale5.png)
-background-position: 80% 35%
-background-size: 800px
 
 # Rationale for scripting analysis
 
 That reproducibility applies to all aspects of the data workflow.
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
+```{r echo = FALSE, out.width="600px"}
+knitr::include_graphics("../pics/rationale5.png")
+```
+
 --
+
 From importing or collecting the data, processing it for analysis, building statistical models and communicating the methods and results.
 
 --
@@ -505,7 +493,7 @@ R has reputation for catering to users who do not see themselves as programmers,
 
 --
 
-It was also designed for data analysis and graphics - it is a 'domain specific' programming language - which means it is usually easier to achieve those tasks in R than a general purpose programming language.
+Designed for data analysis and graphics - which means it is often easier to achieve those tasks in R than a general purpose programming language.
 
 ---
 background-image: url(../pics/welcome_to_rstats_twitter.png)
@@ -530,10 +518,10 @@ Artwork by @allison_horst "welcome to rstats on twitter"
 ---
 background-image: url(../pics/rmarkdown_wizards.png)
 background-position: 10% 60%
-background-size: 500px
+background-size: 450px
 # Why R?
 
-R Markdown is sometimes called R's "killer feature". It turns your analyses into fully reproducible high quality documents, reports, presentations and dashboards.
+R Markdown is sometimes called R's "killer feature". Turns analyses into fully reproducible high quality reports, presentations and dashboards.
 
 Can run Python and other languages in R Markdown documents
 
@@ -549,13 +537,11 @@ class: inverse
 # Aspects of Reproducibility
 
 ---
-# Organisation of data within files
+# Organisation of data 
 
-## What is tidy data?
+Within files should be 'tidy'
 
-One response per row.
-
-Tidy data adhere to a consistent structure which makes it easier to manipulate, model and visualize them. The structure is defined by:  
+Tidy data adhere to a consistent structure which makes it easier to manipulate, model and visualize them. 
 
 1. Each variable has its own column.  
 2. Each observation has its own row.  
@@ -567,18 +553,18 @@ The term 'tidy data' was popularised by `r Citet(myBib, "Wickham2014-nl")`.
 There may be more than one potential tidy structure.  
 
 ---
-# Organisation of data within files
+# Tidy format
 
 ```{r echo=FALSE}
 pigeon <- read.table("../data/pigeon.txt", header = T)
 ```
 
-## Tidy format
-
 Suppose we had just 3 individuals in each of two populations:
 
 .pull-left[
-## NOT TIDY!
+
+**Not tidy**
+
 ```{r echo=FALSE}
 knitr::kable(pigeon[1:3,], 
              format = "html")
@@ -592,7 +578,7 @@ pigeon2 <- gather(data = pigeon,
 
 .pull-right[
 
-## TIDY!
+**Tidy!**
 ```{r echo=FALSE}
 knitr::kable(head(pigeon2[c(1:3,41:43),]), 
              format = "html",
@@ -615,13 +601,13 @@ knitr::kable(head(pigeon2[c(1:3,41:43),]),
 
 .pull-left[
 
-### Directories
+**Directories**
 
 * structured  
 * systematic  
 * repeatable  
 
-### Naming
+**Naming**
 
 * human and machine readable  
   * no spaces  
@@ -631,7 +617,7 @@ knitr::kable(head(pigeon2[c(1:3,41:43),]),
 ]
 
 .pull-right[
-.code50[
+.code40[
 ```
 -- stem_cell_rna_2019
    |__stem_cell_rna_2019.Rproj
@@ -644,7 +630,6 @@ knitr::kable(head(pigeon2[c(1:3,41:43),]),
       |__2019-05-14_donor_3.csv
    |__processed_data
       |__all_long.txt
-      |__all_wide.txt
    |__figures
       |__01_volcano_donor_1_vs_donor_2.eps
       |__02_volcano_donor_1_vs_donor_3.eps
@@ -670,11 +655,6 @@ knitr::kable(head(pigeon2[c(1:3,41:43),]),
 ]
 
 ]
-
-
-
-
-
 
 
 
@@ -704,27 +684,33 @@ knitr::kable(head(pigeon2[c(1:3,41:43),]),
 
 ---
 # References
-.font80[
+.footnote[
+.font60[
+Slides made with with xaringan `r Cite(myBib, "xaringan")` and xaringanExtra `r Cite(myBib, "xaringanExtra")`
+]
+]
+.font60[
 ```{r refs, echo=FALSE, results="asis"}
-PrintBibliography(myBib, end = 8)
+PrintBibliography(myBib, end = 7)
 ```
 ]
 
 ---
 # References
-.footnote[
-Slides made with with xaringan `r Cite(myBib, "xaringan")` and xaringanExtra `r Cite(myBib, "xaringanExtra")`
 
-]
-.font80[
+.font60[
 ```{r refs2, echo=FALSE, results="asis"}
-PrintBibliography(myBib, start = 9)
+PrintBibliography(myBib, start = 8)
 ```
 ]
 ---
-# Introduction to Reproducibility in R
+# Intro to Repro in R
 
-## Emma Rand <br> [emma.rand@york.ac.uk](mailto:emma.rand@york.ac.uk) <br> Twitter: [@er13_r](https://twitter.com/er13_r) <br> GitHub: [3mmaRand](https://github.com/3mmaRand)  <br> blog: https://buzzrbeeline.blog/
-<br>
+Emma Rand  
+[emma.rand@york.ac.uk](mailto:emma.rand@york.ac.uk)  
+Twitter: [@er13_r](https://twitter.com/er13_r)   
+GitHub: [3mmaRand](https://github.com/3mmaRand)  
+blog: https://buzzrbeeline.blog/  
+
 <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">White Rose BBSRC Doctoral Training Partnership (DTP) in Mechanistic Biology Analytics 1: Introduction to reproducible analyses in R</span> by <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Emma Rand</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
 
